# animehd-cpp

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ModelColumn.cpp  ModelColumn.h  config.json  main.cpp  main.glade  main1.glade  utils.cpp  utils.h
